--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Random Image Generator</h1>
-    <button onclick="loadRandomImage()">Generate Random Image</button>
+    <button id="button" onclick="loadRandomImage()">Generate Random Image</button>
     <div id="imageContainer"></div>
 
     <script>
