--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Image Generator</title>
+    <title>Random Meme Generator</title>
     <link rel="stylesheet" href="main.css">
     <style>
         body {
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Random Image Generator</h1>
-    <button id="button" onclick="loadRandomImage()">Generate Random Image</button>
+    <button id="button" onclick="loadRandomImage()">Get Random Meme</button>
     <div id="imageContainer"></div>
 
     <script>
