--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Random Image Generator</h1>
+    <h1>Random Meme Generator</h1>
     <button id="button" onclick="loadRandomImage()">Get Random Meme</button>
     <div id="imageContainer"></div>
 
